feat: working save for multi model
