# backend/src/trigger/dto/create-trigger.dto.ts
@@ -1,25 +1,47 @@
 import { ApiProperty } from "@nestjs/swagger";
-import { Transform, Type } from "class-transformer";
-import { IsDefined, IsEnum, IsString } from "class-validator";
-import { TriggerTypeEnum } from "../entities/TriggerTypeEnum";
-import TriggerMeta from "./meta.dto";
+import { Type } from "class-transformer";
+import { Allow, IsDefined, IsEnum, IsString } from "class-validator";
+import { TriggerTypeEnum } from "../trigger-types/TriggerTypeEnum";
+import AllMetaTypes from "../trigger-types/all-meta-types.dto";
+//import TriggerMeta from "./meta.dto";
 
 export class CreateTriggerDto {
     @ApiProperty()
     @IsString()
+    @Allow()
+    @IsDefined()
     public updateSchedule!: string;
 
+    @IsDefined()
     @IsEnum(TriggerTypeEnum)
     @ApiProperty({ enum: TriggerTypeEnum, enumName: "TriggerTypeEnum" })
     public triggerType!: TriggerTypeEnum;
 
-    //eslint-disable-next-line @typescript-eslint/no-unsafe-return
-    @Type(() => TriggerMeta)
+    @ApiProperty()
     @IsDefined()
-    @Transform(({ value }) => JSON.parse(value) as TriggerMeta, {
-        toClassOnly: true,
-    })
-    @ApiProperty({ type: TriggerMeta })
-    // eslint-disable-next-line @typescript-eslint/ban-types
-    public meta!: TriggerMeta;
+    @Type(() => AllMetaTypes)
+    public allMeta!: AllMetaTypes;
+    // @Type(() => TriggerMeta, {
+    //     discriminator: {
+    //         property: "triggerType",
+    //         subTypes: [
+    //             {
+    //                 value: TwitterUserMentionMeta,
+    //                 name: TriggerTypeEnum.TWITTER_USER_MENTION,
+    //             },
+    //             {
+    //                 value: NoActionTestMeta,
+    //                 name: TriggerTypeEnum.NO_ACTION_DEFAULT,
+    //             },
+    //         ],
+    //     },
+    // })
+    // @IsDefined()
+    // @ApiProperty({
+    //     oneOf: [
+    //         { $ref: getSchemaPath(TwitterUserMentionMeta) },
+    //         { $ref: getSchemaPath(NoActionTestMeta) },
+    //     ],
+    // })
+    // public meta!: TwitterUserMentionMeta | NoActionTestMeta;
 }
