# backend/src/trigger/trigger-types/twitter-user-mention/meta-data.ts
@@ -1,6 +1,7 @@
 import { ApiProperty } from "@nestjs/swagger";
+import TriggerMeta from "../meta.dto";
 
-export class TwitterUserMentionMeta {
+export class TwitterUserMentionMeta extends TriggerMeta {
     @ApiProperty()
     public twitterUserName!: string;
     @ApiProperty()
